--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -18,3 +18,26 @@ if command -v tmux &> /dev/null && [ -z "$TMUX" ]; then
   tmux attach -t default || tmux new -s default
 fi
 
+# Use nvim
+alias vim=nvim
+export EDITOR=nvim
+
+# Color please
+export CLICOLOR=1
+
+# Prompt
+export PROMPT='%F{green}%n:%F{blue}%~%f %% '
+export PROMPT="╭$PROMPT
+╰➤ "
+
+# Disable auto title renaming in tmux
+DISABLE_AUTO_TITLE=true
+
+# TODO: Remove it not missed
+#if command -v tmux &> /dev/null && [ -z "$TMUX" ]; then
+#  tmux
+#  exit
+#fi
+
+# Use aliases with watch
+alias watch="watch "
