--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -62,14 +62,18 @@ setw -g pane-base-index 1
 # Lower escape time for no lag in vim
 set -g escape-time 10
 
-{{- if not (env "SSH_CONNECTION") }}
 # Setting the prefix from C-b to C-a
 set -g prefix C-a
 unbind C-b
  
 # use C-b for remote sessions
 bind-key -n C-b send-keys C-b
-{{- end }}
+
+# Set T to swap local prefix so C-a can be sent remotely
+bind T \
+  if-shell -F "#{==:#{prefix},C-a}" \
+    "set -g prefix C-b; bind-key -n C-b send-prefix; unbind-key -n C-a; bind-key -n C-a send-keys C-a" \
+    "set -g prefix C-a; bind-key -n C-a send-prefix; unbind-key -n C-b; bind-key -n C-b send-keys C-b"
  
 # Reload the file with Prefix r
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
