--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -71,7 +71,7 @@ unbind C-b
 bind-key -n C-b send-keys C-b
 
 # Set T to swap local prefix so C-a can be sent remotely
-bind T \
+bind t \
   if-shell -F "#{==:#{prefix},C-a}" \
     "set -g prefix C-b; set -g @prefix-mode 'b'; bind-key -n C-b send-prefix; unbind-key -n C-a; bind-key -n C-a send-keys C-a" \
     "set -g prefix C-a; set -g @prefix-mode 'a'; bind-key -n C-a send-prefix; unbind-key -n C-b; bind-key -n C-b send-keys C-b"
