--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -1,6 +1,5 @@
 # Terminal colors (recommend by deopelete)
-set -g default-terminal "tmux-256color"
-set-option -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # copy to system clipboard
 {{- if eq .chezmoi.os "linux" }}
