--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -1,5 +1,5 @@
 # Terminal colors
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # Copy to system clipboard
 {{- if eq .chezmoi.os "linux" }}
