Check for linux before ubuntu in templates

--- a/dot_config/zsh/conf.d/empty_ubuntu.zsh.tmpl
+++ b/dot_config/zsh/conf.d/empty_ubuntu.zsh.tmpl
@@ -1,4 +1,4 @@
-{{- if eq .chezmoi.osRelease.id "ubuntu" }}
+{{ if (and (eq .chezmoi.os "linux") (eq .chezmoi.osRelease.id "ubuntu")) }}
 # Add /snap/bin to PATH
 add_to_path_once() {
     if [[ ":$PATH:" != *":$1:"* ]]; then
