--- a/dot_config/zsh/zsh_plugins.txt.tmpl
+++ b/dot_config/zsh/zsh_plugins.txt.tmpl
@@ -8,7 +8,11 @@ mattmc3/zephyr path:plugins/environment
 mattmc3/zephyr path:plugins/history
 mattmc3/zephyr path:plugins/homebrew
 mattmc3/zephyr path:plugins/macos
+{{- if eq .chezmoi.os "darwin" }}
+# mattmc3/zephyr path:plugins/prompt
+{{- else }}
 mattmc3/zephyr path:plugins/prompt
+{{- end }}
 mattmc3/zephyr path:plugins/utility
 mattmc3/zephyr path:plugins/zfunctions
 
