--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -2,28 +2,33 @@
 set -g default-terminal "screen-256color"
 
 # Copy to system clipboard
-{{- if eq .chezmoi.os "darwin" }}
-# macOS
 set -g set-clipboard on
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
-{{- else if eq .chezmoi.os "linux" }}
-  {{- if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
-# WSL
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "/mnt/c/Windows/System32/clip.exe"
-  {{- else }}
-# Remote Linux (non-WSL)
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
-  {{- end }}
-{{- end }}
+bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi Enter send -X copy-selection-and-cancel
 
-# Paste from clipboard
-{{- if eq .chezmoi.os "darwin" }}
-# macOS (no special binding needed, Command+V works)
-{{- else if eq .chezmoi.os "linux" }}
-# Linux (including WSL)
-bind-key -T prefix p run-shell "xclip -o -selection clipboard | tmux load-buffer - ; tmux paste-buffer"
-{{- end }}
+# Previous OS-specifc configs keep until WSL tested
+#{{- if eq .chezmoi.os "darwin" }}
+## macOS
+#set -g set-clipboard on
+#bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
+#bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
+#{{- else if eq .chezmoi.os "linux" }}
+#  {{- if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
+## WSL
+#bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "/mnt/c/Windows/System32/clip.exe"
+#  {{- else }}
+## Remote Linux (non-WSL)
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
+#  {{- end }}
+#{{- end }}
+#
+## Paste from clipboard
+#{{- if eq .chezmoi.os "darwin" }}
+## macOS (no special binding needed, Command+V works)
+#{{- else if eq .chezmoi.os "linux" }}
+## Linux (including WSL)
+#bind-key -T prefix p run-shell "xclip -o -selection clipboard | tmux load-buffer - ; tmux paste-buffer"
+#{{- end }}
 
 # use vim style selection and block selection
 unbind-key -T copy-mode-vi 'v'
