Setup gcommands on darwin

--- a/dot_config/zsh/conf.d/empty_darwin.zsh.tmpl
+++ b/dot_config/zsh/conf.d/empty_darwin.zsh.tmpl
@@ -14,4 +14,11 @@ add_to_path_once() {
 # Add go to path
 add_to_path_once "/Users/chris/go/bin"
 
+# gcloud completions from homebrew
+source "$(brew --prefix)/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/completion.zsh.inc"
+source "$(brew --prefix)/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/path.zsh.inc"
+
+# Include replicated gcommands
+source ~/src/oh-my-replicated/replicated-gcommands/replicated-gcommands.plugin.zsh
+
 {{- end }}
