--- a/dot_config/zsh/conf.d/empty_darwin.zsh.tmpl
+++ b/dot_config/zsh/conf.d/empty_darwin.zsh.tmpl
@@ -19,6 +19,8 @@ source "$(brew --prefix)/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/compl
 source "$(brew --prefix)/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/path.zsh.inc"
 
 # Include replicated gcommands
+GUSER='chriss'
+GPREFIX='chriss'
 source ~/src/oh-my-replicated/replicated-gcommands/replicated-gcommands.plugin.zsh
 
 {{- end }}
