--- a/dot_config/zsh/conf.d/empty_darwin.zsh.tmpl
+++ b/dot_config/zsh/conf.d/empty_darwin.zsh.tmpl
@@ -16,13 +16,13 @@ add_to_path_once "/Users/chris/go/bin"
 add_to_path_once "/Users/chris/.local/bin"
 
 # gcloud completions from homebrew
-source "$(brew --prefix)/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/completion.zsh.inc"
-source "$(brew --prefix)/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/path.zsh.inc"
+#source "$(brew --prefix)/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/completion.zsh.inc"
+#source "$(brew --prefix)/Caskroom/google-cloud-sdk/latest/google-cloud-sdk/path.zsh.inc"
 
 # Include replicated gcommands
 GUSER='chriss'
 GPREFIX='chriss'
-source ~/src/oh-my-replicated/replicated-gcommands/replicated-gcommands.plugin.zsh
+#source ~/src/oh-my-replicated/replicated-gcommands/replicated-gcommands.plugin.zsh
 
 
 {{- end }}
