--- a/dot_config/zsh/conf.d/empty_ubuntu.zsh.tmpl
+++ b/dot_config/zsh/conf.d/empty_ubuntu.zsh.tmpl
@@ -11,6 +11,6 @@ add_to_path_once "/snap/bin"
 add_to_path_once "$HOME/local/bin"
 
 # Setup local npm-modules
-add_to_path_once "$HOME/.npm-modules"
+add_to_path_once "$HOME/.npm-modules/bin"
 
 {{- end }}
