--- a/dot_config/skhd/skhdrc.tmpl
+++ b/dot_config/skhd/skhdrc.tmpl
@@ -176,5 +176,5 @@ alt - v : yabai -m window --toggle split
 #           yabai -m window --toggle pip
 
 # Launch a new terminal
-alt - return : open -na /Applications/Alacritty.app
+alt - return : open -na /Applications/Ghostty.app
 {{ end }}
