Add ulimit for darwin

--- a/dot_config/zsh/conf.d/empty_darwin.zsh.tmpl
+++ b/dot_config/zsh/conf.d/empty_darwin.zsh.tmpl
@@ -2,6 +2,9 @@
 # Homebrew
 eval "$(/opt/homebrew/bin/brew shellenv)"
 
+# Increase fd limit
+ulimit -n 10240
+
 # Alias sbctl
 alias sbc="sbctl shell --token=$VPTOKEN --support-bundle-location $1"
 
