Add molecule environment switching and ansible bin tools
- Add molecule.zsh with dev1/dev2/ci switching functions (Ubuntu only)
- Add ansible/bin/* scripts (ac-activate, ac-run, ac-start, ac-stop, container-exec.sh)
- Update ansible/.envrc to add bin to PATH and warn about MOLECULE_VM_ENVIRONMENT
- Add flyctl to ubuntu.zsh template

--- a/dot_config/zsh/conf.d/empty_ubuntu.zsh.tmpl
+++ b/dot_config/zsh/conf.d/empty_ubuntu.zsh.tmpl
@@ -13,4 +13,8 @@ add_to_path_once "$HOME/local/bin"
 # Setup local npm-modules
 add_to_path_once "$HOME/.npm-modules/bin"
 
+# Setup flyctl
+export FLYCTL_INSTALL="/home/chris/.fly"
+export PATH="$FLYCTL_INSTALL/bin:$PATH"
+
 {{- end }}
